--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Welcome to Pratik's website
+<!doctype html>
+
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+
+    <title>Pratik Ringshia</title>
+    <meta name="description" content="Pratik's website">
+    <meta name="author" content="Pratik Ringshia">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.8.0/css/tachyons.min.css" />
+
+    <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+</head>
+
+<body class="bg-yellow black-70 pa2 sans-serif">
+    <div class="mw9 center ph5">
+        <h1 class="f1">Welcome!</h1>
+    </div>
+
+</body>
+
+</html>
