--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <![endif]-->
 </head>
 
-<body class="bg-yellow black-70 pa2 sans-serif">
-    <div class="mw9 center ph5">
-        <h1 class="f1">Welcome!</h1>
+<body class="bg-yellow black-70 pa5-ns pa-3 sans-serif">
+    <div class="mw9 center ph5-ns ph3">
+        <h1 class="f1 tracked-tight">Pratik Ringshia</h1>
+        <p class="serif measure lh-copy">Hi! I'm a UI engineer currently living in NYC and working at <a href="https://bamfunds.com" class="link blue">Balyasny Asset Management</a>.
+            Welcome to my little space on the internet.</p>
+        <!-- class="mt4"><a class="f6 link black-50 ttu tracked" href="https://twitter.com/pratik_at_work">Twitter</a></p> -->
     </div>
 
 </body>
